@@ -1,11 +1,11 @@
 package ch.sbb.atlas.servicepointdirectory.controller;
 
+import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
-import static org.assertj.core.api.Assertions.assertThat;
 
 import ch.sbb.atlas.base.service.imports.servicepoint.BaseDidokCsvModel;
 import ch.sbb.atlas.base.service.imports.servicepoint.model.ServicePointImportReqModel;
@@ -15,11 +15,10 @@ import ch.sbb.atlas.base.service.model.controller.BaseControllerApiTest;
 import ch.sbb.atlas.servicepointdirectory.ServicePointTestData;
 import ch.sbb.atlas.servicepointdirectory.api.ServicePointVersionModel.Fields;
 import ch.sbb.atlas.servicepointdirectory.entity.ServicePointVersion;
-import ch.sbb.atlas.servicepointdirectory.model.ServicePointNumber;
 import ch.sbb.atlas.servicepointdirectory.repository.ServicePointVersionRepository;
 import ch.sbb.atlas.servicepointdirectory.service.servicepoint.ServicePointImportService;
 import java.io.InputStream;
-import java.time.LocalDate;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import org.junit.jupiter.api.AfterEach;
@@ -29,8 +28,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.web.servlet.result.MockMvcResultHandlers;
 
 public class ServicePointControllerApiTest extends BaseControllerApiTest {
-
-  private static final String CSV_FILE = "DIDOK3_DIENSTSTELLEN_ALL_V_3_20221222015634.csv";
 
   private final ServicePointVersionRepository repository;
 
@@ -102,211 +99,75 @@ public class ServicePointControllerApiTest extends BaseControllerApiTest {
         .andExpect(status().isNotFound());
   }
 
-  /*@Test
-  void test_ImportServicePoints_shouldWork() throws Exception {
-    InputStream csvStream = this.getClass().getResourceAsStream("/" + CSV_FILE);
-    List<ServicePointCsvModel> servicePointCsvModels = ServicePointImportService.parseServicePoints(csvStream);
-    servicePointCsvModels = servicePointCsvModels.subList(0, 10);
-    List<ServicePointCsvModelContainer> servicePointCsvModelContainers = new ArrayList<>();
-    Map<Integer, List<ServicePointCsvModel>> collect = servicePointCsvModels.stream()
-        .collect(Collectors.groupingBy(ServicePointCsvModel::getDidokCode));
-    collect.forEach((key, value) -> {
-      ServicePointCsvModelContainer servicePointCsvModelContainer = ServicePointCsvModelContainer.builder()
-          .didokCode(key)
-          .servicePointCsvModelList(value)
-          .build();
-      value.sort(Comparator.comparing(BaseDidokCsvModel::getValidFrom));
-      servicePointCsvModelContainers.add(servicePointCsvModelContainer);
-    });
+  @Test
+  void shouldImportServicePointsSuccessfully() throws Exception {
+    try (InputStream csvStream = this.getClass().getResourceAsStream("/SERVICE_POINTS_VERSIONING.csv")) {
+      // given
+      List<ServicePointCsvModel> servicePointCsvModels = ServicePointImportService.parseServicePoints(csvStream);
+      List<ServicePointCsvModel> servicePointCsvModelsOrderedByValidFrom = servicePointCsvModels.stream()
+          .sorted(Comparator.comparing(BaseDidokCsvModel::getValidFrom))
+          .toList();
+      int didokCode = servicePointCsvModels.get(0).getDidokCode();
+      ServicePointImportReqModel importRequestModel = new ServicePointImportReqModel(
+          List.of(
+              ServicePointCsvModelContainer
+                  .builder()
+                  .servicePointCsvModelList(servicePointCsvModelsOrderedByValidFrom)
+                  .didokCode(didokCode)
+                  .build()
+          )
+      );
+      String jsonString = mapper.writeValueAsString(importRequestModel);
 
-    ServicePointImportReqModel importReqModel = new ServicePointImportReqModel(servicePointCsvModelContainers);
-
-    String s = mapper.writeValueAsString(importReqModel);
-
-    mvc.perform(post("/v1/service-points/import")
-            .content(s)
-            .contentType(contentType))
-        .andExpect(status().isOk());
+      // when
+      mvc.perform(post("/v1/service-points/import")
+              .content(jsonString)
+              .contentType(contentType))
+          // then
+          .andExpect(status().isOk())
+          .andExpect(jsonPath("$", hasSize(5)));
+    }
   }
 
   @Test
-  void test_ImportServicePoints_withVersionsOrdered() throws Exception {
-    InputStream csvStream = this.getClass().getResourceAsStream("/" + CSV_FILE);
-    List<ServicePointCsvModel> servicePointCsvModels = ServicePointImportService.parseServicePoints(csvStream);
-    int didokCode = 10000190;
-    List<ServicePointCsvModel> servicePointCsvModelsOrdered =
-        servicePointCsvModels.stream().filter(item -> item.getDidokCode() == didokCode).sorted(
-            (o1, o2) -> o1.getValidFrom().isBefore(o2.getValidFrom()) ? 1 :
-                o1.getValidFrom().isEqual(o2.getValidFrom()) ? 0 : -1
-        ).toList();
-    List<ServicePointCsvModelContainer> servicePointCsvModelContainers = new ArrayList<>();
-    ServicePointCsvModelContainer servicePointCsvModelContainer = ServicePointCsvModelContainer.builder()
-        .didokCode(didokCode).servicePointCsvModelList(servicePointCsvModelsOrdered).build();
-    servicePointCsvModelContainers.add(servicePointCsvModelContainer);
-
-    ServicePointImportReqModel importReqModel = new ServicePointImportReqModel(servicePointCsvModelContainers);
-
-    String s = mapper.writeValueAsString(importReqModel);
-
-    mvc.perform(post("/v1/service-points/import")
-            .content(s)
-            .contentType(contentType))
-        .andExpect(status().isOk());
-
-    ServicePointNumber servicePointNumber = ServicePointNumber.of(didokCode);
-    List<ServicePointVersion> savedServicePointsOrderedValidFrom = servicePointService.findServicePoint(servicePointNumber);
-    repository.deleteAll();
-
-    // second import
-    List<ServicePointCsvModel> servicePointCsvModelsReverseOrdered =
-        servicePointCsvModels.stream().filter(item -> item.getDidokCode() == didokCode).sorted(
-            (o1, o2) -> o1.getValidFrom().isAfter(o2.getValidFrom()) ? 1 :
-                o1.getValidFrom().isEqual(o2.getValidFrom()) ? 0 : -1
-        ).toList();
-
-    List<ServicePointCsvModelContainer> servicePointCsvModelContainersReverseOrdered = new ArrayList<>();
-    ServicePointCsvModelContainer servicePointCsvModelContainerReverseOrdered = ServicePointCsvModelContainer.builder()
-        .didokCode(didokCode).servicePointCsvModelList(servicePointCsvModelsReverseOrdered).build();
-    servicePointCsvModelContainers.add(servicePointCsvModelContainerReverseOrdered);
-
-    importReqModel = new ServicePointImportReqModel(servicePointCsvModelContainersReverseOrdered);
-    s = mapper.writeValueAsString(importReqModel);
-
-    mvc.perform(post("/v1/service-points/import")
-            .content(s)
-            .contentType(contentType))
-        .andExpect(status().isOk());
-
-    List<ServicePointVersion> savedServicePointsReverseOrderedValidFrom =
-        servicePointService.findServicePoint(servicePointNumber);
-
-    // asserts
-    assertThat(savedServicePointsOrderedValidFrom).hasSize(servicePointCsvModelsOrdered.size());
-    assertThat(savedServicePointsReverseOrderedValidFrom).hasSize(servicePointCsvModelsReverseOrdered.size());
-    assertThat(savedServicePointsOrderedValidFrom).hasSize(savedServicePointsReverseOrderedValidFrom.size());
-    for (int i = 0; i < savedServicePointsOrderedValidFrom.size(); i++) {
-      assertThat(savedServicePointsOrderedValidFrom.get(i).getValidFrom()
-          .isEqual(savedServicePointsReverseOrderedValidFrom.get(i).getValidFrom())).isTrue();
-      assertThat(savedServicePointsOrderedValidFrom.get(i).getValidTo()
-          .isEqual(savedServicePointsReverseOrderedValidFrom.get(i).getValidTo())).isTrue();
-      assertThat(savedServicePointsOrderedValidFrom.get(i).getDesignationOfficial()).isEqualTo(
-          savedServicePointsReverseOrderedValidFrom.get(i).getDesignationOfficial());
-    }
-  }*/
-
-  @Test
-  void test_ImportServicePoints_withVersionsUnordered() throws Exception {
+  void shouldReturnBadRequestOnEmptyListRequest() throws Exception {
     // given
-    InputStream csvStream = this.getClass().getResourceAsStream("/SERVICE_POINTS_VERSIONING.csv");
-    List<ServicePointCsvModel> servicePointCsvModels = ServicePointImportService.parseServicePoints(csvStream);
-
-    List<ServicePointCsvModel> servicePointCsvModelsOrdered = servicePointCsvModels.stream()
-        .sorted(Comparator.comparing(BaseDidokCsvModel::getValidFrom))
-        .toList();
-
-    int didokCode = servicePointCsvModels.get(0).getDidokCode();
     ServicePointImportReqModel importRequestModel = new ServicePointImportReqModel(
-        List.of(
-            ServicePointCsvModelContainer
-                .builder()
-                .servicePointCsvModelList(servicePointCsvModelsOrdered)
-                .didokCode(didokCode)
-                .build()
-        )
+        Collections.emptyList()
     );
-
     String jsonString = mapper.writeValueAsString(importRequestModel);
 
     // when
     mvc.perform(post("/v1/service-points/import")
             .content(jsonString)
             .contentType(contentType))
-        .andExpect(status().isOk());
+        // then
+        .andExpect(status().isBadRequest())
+        .andExpect(jsonPath("$.message", is("Constraint for requestbody was violated")));
+  }
 
-    // then
-    List<ServicePointVersion> allByNumberOrderByValidFrom = repository.findAllByNumberOrderByValidFrom(
-        ServicePointNumber.of(didokCode));
-    assertThat(allByNumberOrderByValidFrom).hasSize(5);
+  @Test
+  void shouldReturnBadRequestOnNullListRequest() throws Exception {
+    // given
+    ServicePointImportReqModel importRequestModel = new ServicePointImportReqModel();
+    String jsonString = mapper.writeValueAsString(importRequestModel);
 
-    // TODO
-    // update with ordered list
-    LocalDate newValidFrom = servicePointCsvModelsOrdered.get(0).getValidFrom().minusDays(5);
-    servicePointCsvModelsOrdered.get(0).setValidFrom(newValidFrom);
-
-    LocalDate newValidTo = servicePointCsvModelsOrdered.get(1).getValidTo().plusDays(5);
-    servicePointCsvModelsOrdered.get(1).setValidTo(newValidTo);
-
-    servicePointCsvModelsOrdered.get(2).setBezeichnungOffiziell("Test");
-
-    servicePointCsvModelsOrdered.get(4).setBezeichnungOffiziell("Test2");
-    servicePointCsvModelsOrdered.get(4).setValidTo(servicePointCsvModelsOrdered.get(4).getValidTo().minusDays(5));
-
-    /*importReqModel = new ServicePointImportReqModel(servicePointCsvModelsOrdered);
-
-    s = mapper.writeValueAsString(importReqModel);
-
+    // when
     mvc.perform(post("/v1/service-points/import")
-            .content(s)
+            .content(jsonString)
             .contentType(contentType))
-        .andExpect(status().isOk());
+        // then
+        .andExpect(status().isBadRequest())
+        .andExpect(jsonPath("$.message", is("Constraint for requestbody was violated")));
+  }
 
-    ServicePointNumber servicePointNumber = ServicePointNumber.of(didokCode);
-    List<ServicePointVersion> updatedWithOrderedList = servicePointService.findServicePoint(servicePointNumber);
-    repository.deleteAll();
-
-    // update with unordered list
-    servicePointCsvModelsOrdered =
-        servicePointCsvModels.stream().filter(item -> item.getDidokCode() == didokCode).sorted(
-            (o1, o2) -> o1.getValidFrom().isBefore(o2.getValidFrom()) ? 1 :
-                o1.getValidFrom().isEqual(o2.getValidFrom()) ? 0 : -1
-        ).toList();
-    importReqModel = new ServicePointImportReqModel(servicePointCsvModelsOrdered);
-
-    s = mapper.writeValueAsString(importReqModel);
-
+  @Test
+  void shouldReturnBadRequestOnNullImportRequestModel() throws Exception {
+    // given & when
     mvc.perform(post("/v1/service-points/import")
-            .content(s)
             .contentType(contentType))
-        .andExpect(status().isOk());
-
-    // update
-    newValidFrom = servicePointCsvModelsOrdered.get(0).getValidFrom().minusDays(5);
-    servicePointCsvModelsOrdered.get(0).setValidFrom(newValidFrom);
-    newValidTo = servicePointCsvModelsOrdered.get(1).getValidTo().plusDays(5);
-    servicePointCsvModelsOrdered.get(1).setValidTo(newValidTo);
-
-    servicePointCsvModelsOrdered.get(2).setBezeichnungOffiziell("Test");
-
-    servicePointCsvModelsOrdered.get(4).setBezeichnungOffiziell("Test2");
-    servicePointCsvModelsOrdered.get(4).setValidTo(servicePointCsvModelsOrdered.get(4).getValidTo().minusDays(5));
-
-    // reverse
-    List<ServicePointCsvModel> reversedUpdateList = servicePointCsvModelsOrdered.stream().sorted(
-        (o1, o2) -> o1.getValidFrom().isAfter(o2.getValidFrom()) ? 1 :
-            o1.getValidFrom().isEqual(o2.getValidFrom()) ? 0 : -1
-    ).toList();
-
-    importReqModel = new ServicePointImportReqModel(reversedUpdateList);
-
-    s = mapper.writeValueAsString(importReqModel);
-
-    mvc.perform(post("/v1/service-points/import")
-            .content(s)
-            .contentType(contentType))
-        .andExpect(status().isOk());
-
-    List<ServicePointVersion> updatedWithReversedList = servicePointService.findServicePoint(servicePointNumber);
-
-    // asserts
-    assertThat(updatedWithOrderedList).hasSize(updatedWithReversedList.size());
-    for (int i = 0; i < updatedWithOrderedList.size(); i++) {
-      assertThat(updatedWithOrderedList.get(i).getValidFrom()
-          .isEqual(updatedWithReversedList.get(i).getValidFrom())).isTrue();
-      assertThat(updatedWithOrderedList.get(i).getValidTo()
-          .isEqual(updatedWithReversedList.get(i).getValidTo())).isTrue();
-      assertThat(updatedWithOrderedList.get(i).getDesignationOfficial()).isEqualTo(
-          updatedWithReversedList.get(i).getDesignationOfficial());
-    }*/
+        // then
+        .andExpect(status().isBadRequest());
   }
 
 }
